Removing pom.xml comments.