@@ -32,14 +32,6 @@
     <tag>HEAD</tag>
   </scm>
 
-  <properties>
-    <!-- Configures the Java 9+ run to perform the required module exports, opens, and reads that are necessary for testing but shouldn't be part of the module-info. -->
-    <javaModulesSurefireArgLine>
-      --add-exports com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
-      --add-reads com.azure.messaging.webpubsub=tyrus.client
-    </javaModulesSurefireArgLine>
-  </properties>
-
   <dependencies>
     <dependency>
       <groupId>com.azure</groupId>
